Adding jupyter notebook scraping.

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### NASA Mars Article"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'https://mars.nasa.gov/news/'\n",
-    "#browser.visit(url)\n",
     "\n",
     "# Retrieve page with the requests module\n",
     "response = requests.get(url)\n",
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +45,7 @@
        "\"NASA's Perseverance Drives on Mars' Terrain for First Time\""
       ]
      },
-     "execution_count": 64,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -79,15 +78,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### JPL Mars Space Images"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg\n"
+      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg\n"
      ]
     }
    ],
@@ -150,8 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Facts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -184,54 +190,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Description</th>\n",
        "      <th>Mars</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Description</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Equatorial Diameter:</td>\n",
+       "      <th>Equatorial Diameter:</th>\n",
        "      <td>6,792 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Polar Diameter:</td>\n",
+       "      <th>Polar Diameter:</th>\n",
        "      <td>6,752 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mass:</td>\n",
+       "      <th>Mass:</th>\n",
        "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Moons:</td>\n",
+       "      <th>Moons:</th>\n",
        "      <td>2 (Phobos &amp; Deimos)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Orbit Distance:</td>\n",
+       "      <th>Orbit Distance:</th>\n",
        "      <td>227,943,824 km (1.38 AU)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Orbit Period:</td>\n",
+       "      <th>Orbit Period:</th>\n",
        "      <td>687 days (1.9 years)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Surface Temperature:</td>\n",
+       "      <th>Surface Temperature:</th>\n",
        "      <td>-87 to -5 °C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>First Record:</td>\n",
+       "      <th>First Record:</th>\n",
        "      <td>2nd millennium BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Recorded By:</td>\n",
+       "      <th>Recorded By:</th>\n",
        "      <td>Egyptian astronomers</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -239,19 +239,20 @@
        "</div>"
       ],
       "text/plain": [
-       "            Description                           Mars\n",
-       "0  Equatorial Diameter:                       6,792 km\n",
-       "1       Polar Diameter:                       6,752 km\n",
-       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
-       "3                Moons:            2 (Phobos & Deimos)\n",
-       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
-       "5         Orbit Period:           687 days (1.9 years)\n",
-       "6  Surface Temperature:                   -87 to -5 °C\n",
-       "7         First Record:              2nd millennium BC\n",
-       "8          Recorded By:           Egyptian astronomers"
+       "                                               Mars\n",
+       "Description                                        \n",
+       "Equatorial Diameter:                       6,792 km\n",
+       "Polar Diameter:                            6,752 km\n",
+       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
+       "Moons:                          2 (Phobos & Deimos)\n",
+       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
+       "Orbit Period:                  687 days (1.9 years)\n",
+       "Surface Temperature:                   -87 to -5 °C\n",
+       "First Record:                     2nd millennium BC\n",
+       "Recorded By:                   Egyptian astronomers"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,246 @@
    "source": [
     "factstable = pd.read_html(factsurl)\n",
     "factstable[0].columns = ['Description','Mars']\n",
+    "factstable[0].set_index(\"Description\",inplace=True)\n",
     "factstable[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factstable_html = factstable[0].to_html()\n",
+    "factstable_html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>Mars</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Description</th>\n",
+      "      <th></th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>Equatorial Diameter:</th>\n",
+      "      <td>6,792 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Polar Diameter:</th>\n",
+      "      <td>6,752 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Mass:</th>\n",
+      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Moons:</th>\n",
+      "      <td>2 (Phobos &amp; Deimos)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Orbit Distance:</th>\n",
+      "      <td>227,943,824 km (1.38 AU)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Orbit Period:</th>\n",
+      "      <td>687 days (1.9 years)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Surface Temperature:</th>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>First Record:</th>\n",
+      "      <td>2nd millennium BC</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>Recorded By:</th>\n",
+      "      <td>Egyptian astronomers</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "factstable_html.replace('\\n','')\n",
+    "print(factstable_html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemi_url=\"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "    \n",
+    "browser.visit(hemi_url)\n",
+    "html = browser.html\n",
+    "hemisoup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<div class=\"item\">\\n <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\\n  <img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/>\\n </a>\\n <div class=\"description\">\\n  <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\\n   <h3>\\n    Cerberus Hemisphere Enhanced\\n   </h3>\\n  </a>\\n  <span class=\"subtitle\" style=\"float:left\">\\n   image/tiff 21 MB\\n  </span>\\n  <span class=\"pubDate\" style=\"float:right\">\\n  </span>\\n  <br/>\\n  <p>\\n   Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…\\n  </p>\\n </div>\\n <!-- end description -->\\n</div>\\n'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemi_results = hemisoup.find(\"div\", class_=\"collapsible results\")\n",
+    "hemi_items = hemi_results.find_all(\"div\", class_=\"item\")\n",
+    "hemi_items[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# loop over results to get titles and urls\n",
+    "for item in hemi_items:\n",
+    "    # scrape the image title\n",
+    "    description = item.find('div', class_='description')\n",
+    "    title = description.find('h3').text\n",
+    "    \n",
+    "    # scrape the image url\n",
+    "    hemi_page_url_short = item.a['href']\n",
+    "    \n",
+    "    browser.visit(f'https://astrogeology.usgs.gov{hemi_page_url_short}')\n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    downloads = soup.find(\"div\", class_=\"downloads\")\n",
+    "    img_url = downloads.find('li').a['href']\n",
+    "    \n",
+    "    # Create Dictionary Element\n",
+    "    hemi_dict = {\n",
+    "        'title': title,\n",
+    "        'img_url': img_url,\n",
+    "    }\n",
+    "\n",
+    "    # Append to list\n",
+    "    hemisphere_image_urls.append(hemi_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_dict={\n",
+    "    \"news_title\": news_title,\n",
+    "    \"news_p\": news_p,\n",
+    "    \"featured_image_url\":featured_image_url,\n",
+    "    \"factstable_html\":factstable_html,\n",
+    "    \"hemisphere_images\":hemisphere_image_urls\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'news_title': \"NASA's Perseverance Drives on Mars' Terrain for First Time\",\n",
+       " 'news_p': None,\n",
+       " 'featured_image_url': 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg',\n",
+       " 'factstable_html': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'hemisphere_images': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_dict"
    ]
   },
   {
@@ -267,14 +507,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hemisphere_image_urls = [\n",
-    "    {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg\"},\n",
-    "    {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg\"},\n",
-    "    {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg\"},\n",
-    "    {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg\"},\n",
-    "]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -288,20 +521,14 @@
    "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "news_title = \"NASA's Next Mars Mission to Investigate Interior of Red Planet\"\n",
-    "\n",
-    "news_p = \"Preparation of NASA's next spacecraft to Mars, InSight, has ramped up this summer, on course for launch next May from Vandenberg Air Force Base in central California -- the first interplanetary launch in history from America's West Coast.\"\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "<img class=\"headerimage fade-in\" src=\"image/featured/mars2.jpg\">"
-   ]
+   "source": []
   }
  ],
  "metadata": {
