Adding Python, MongoDB and Flask App. Adding initial HTML.

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "\"NASA's Perseverance Drives on Mars' Terrain for First Time\""
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,21 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "\n",
+      "The first trek of the agency’s largest, most advanced rover yet on the Red Planet marks a major milestone before science operations get under way.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Parse the page for the \"article_teaser_body\" element\n",
-    "news_paragraph = soup.find('div', class_=\"article_teaser_body\")\n",
-    "news_p = soup.find('div', class_='text')\n",
+    "news_paragraph = soup.find('div', class_=\"rollover_description_inner\").text\n",
     "print(news_paragraph)"
    ]
   },
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +96,7 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Driver [/Users/kristenlega/.wdm/drivers/chromedriver/mac64/88.0.4324.96/chromedriver] found in cache\n"
+      "[WDM] - Get LATEST driver version for 88.0.4324\n"
      ]
     },
     {
@@ -105,6 +105,15 @@
      "text": [
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_mac64.zip\n",
+      "[WDM] - Driver has been saved in cache [/Users/kristenlega/.wdm/drivers/chromedriver/mac64/88.0.4324.96]\n"
      ]
     }
    ],
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg\n"
+      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg\n"
      ]
     }
    ],
@@ -501,34 +510,6 @@
    "source": [
     "final_dict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
