--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from bs4 import BeautifulSoup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from cachecontrol import CacheControl"
    ]
   },
   {
@@ -22,21 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://mars.nasa.gov/news/'\n",
+    "url = 'https://mars.nasa.gov/news/?page=0&per_page=40&order=publish_date+desc%2Ccreated_at+desc&search=&category=19%2C165%2C184%2C204&blank_scope=Latest'\n",
     "\n",
+    "sess = requests.session()\n",
+    "cached_sess = CacheControl(sess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Retrieve page with the requests module\n",
-    "response = requests.get(url)\n",
+    "response = cached_sess.get(url, headers={\"Cache-Control\": \"no-cache\",\n",
+    "    \"Pragma\": \"no-cache\"})\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(response.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +57,7 @@
        "\"NASA's Perseverance Drives on Mars' Terrain for First Time\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,13 +65,12 @@
    "source": [
     "# Parse the page for the \"content_title\" element\n",
     "news_title = soup.find('div', class_=\"content_title\").text.strip()\n",
-    "\n",
     "news_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -87,36 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_mac64.zip\n",
-      "[WDM] - Driver has been saved in cache [/Users/kristenlega/.wdm/drivers/chromedriver/mac64/88.0.4324.96]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -129,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "short_url = imgsoup.find('img', class_=\"headerimage fade-in\")\n",
     "short_url_clean = short_url['src']\n",
@@ -166,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,97 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mars</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Description</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
-       "      <td>6,792 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
-       "      <td>6,752 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mass:</th>\n",
-       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Moons:</th>\n",
-       "      <td>2 (Phobos &amp; Deimos)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
-       "      <td>227,943,824 km (1.38 AU)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
-       "      <td>687 days (1.9 years)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
-       "      <td>-87 to -5 °C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>First Record:</th>\n",
-       "      <td>2nd millennium BC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
-       "      <td>Egyptian astronomers</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Mars\n",
-       "Description                                        \n",
-       "Equatorial Diameter:                       6,792 km\n",
-       "Polar Diameter:                            6,752 km\n",
-       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
-       "Moons:                          2 (Phobos & Deimos)\n",
-       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
-       "Orbit Period:                  687 days (1.9 years)\n",
-       "Surface Temperature:                   -87 to -5 °C\n",
-       "First Record:                     2nd millennium BC\n",
-       "Recorded By:                   Egyptian astronomers"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "factstable = pd.read_html(factsurl)\n",
     "factstable[0].columns = ['Description','Mars']\n",
@@ -275,20 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "factstable_html = factstable[0].to_html()\n",
     "factstable_html"
@@ -296,68 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table border=\"1\" class=\"dataframe\">\n",
-      "  <thead>\n",
-      "    <tr style=\"text-align: right;\">\n",
-      "      <th></th>\n",
-      "      <th>Mars</th>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Description</th>\n",
-      "      <th></th>\n",
-      "    </tr>\n",
-      "  </thead>\n",
-      "  <tbody>\n",
-      "    <tr>\n",
-      "      <th>Equatorial Diameter:</th>\n",
-      "      <td>6,792 km</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Polar Diameter:</th>\n",
-      "      <td>6,752 km</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Mass:</th>\n",
-      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Moons:</th>\n",
-      "      <td>2 (Phobos &amp; Deimos)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Orbit Distance:</th>\n",
-      "      <td>227,943,824 km (1.38 AU)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Orbit Period:</th>\n",
-      "      <td>687 days (1.9 years)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Surface Temperature:</th>\n",
-      "      <td>-87 to -5 °C</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>First Record:</th>\n",
-      "      <td>2nd millennium BC</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>Recorded By:</th>\n",
-      "      <td>Egyptian astronomers</td>\n",
-      "    </tr>\n",
-      "  </tbody>\n",
-      "</table>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "factstable_html.replace('\\n','')\n",
     "print(factstable_html)"
@@ -372,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,20 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<div class=\"item\">\\n <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\\n  <img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/>\\n </a>\\n <div class=\"description\">\\n  <a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\">\\n   <h3>\\n    Cerberus Hemisphere Enhanced\\n   </h3>\\n  </a>\\n  <span class=\"subtitle\" style=\"float:left\">\\n   image/tiff 21 MB\\n  </span>\\n  <span class=\"pubDate\" style=\"float:right\">\\n  </span>\\n  <br/>\\n  <p>\\n   Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…\\n  </p>\\n </div>\\n <!-- end description -->\\n</div>\\n'"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hemi_results = hemisoup.find(\"div\", class_=\"collapsible results\")\n",
     "hemi_items = hemi_results.find_all(\"div\", class_=\"item\")\n",
@@ -407,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,34 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
-       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
-       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
-       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
-       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hemisphere_image_urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,31 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'news_title': \"NASA's Perseverance Drives on Mars' Terrain for First Time\",\n",
-       " 'news_p': None,\n",
-       " 'featured_image_url': 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg',\n",
-       " 'factstable_html': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
-       " 'hemisphere_images': [{'title': 'Cerberus Hemisphere Enhanced',\n",
-       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
-       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
-       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
-       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
-       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
-       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
-       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_dict"
    ]
